@@ -1,3 +1,7 @@
+2007-01-02  Danilo Šegan  <danilo@gnome.org>
+
+	* gnome-modules.xml.in: Switch to SVN.
+
 2007-01-01  Danilo Šegan  <danilo@gnome.org>
 
 	* teams.py: Fix exception when release == None.
